[gd_scene load_steps=3 format=3 uid="uid://d01novt0hh55f"]

[ext_resource type="Script" path="res://src/ui/end_match_panel/EndMatchPanel.gd" id="1_0qpbr"]
[ext_resource type="Script" path="res://src/ui/default_button/DefaultButton.gd" id="1_y4pxu"]

[node name="EndMatchPanel" type="Node2D"]
script = ExtResource("1_0qpbr")

[node name="Panel" type="Panel" parent="."]
offset_right = 512.0
offset_bottom = 160.0

[node name="PanelContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 480.0
offset_bottom = 128.0
alignment = 1

[node name="WinningTeamLabel" type="Label" parent="Panel/PanelContainer"]
layout_mode = 2
text = "Team Wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="Panel/PanelContainer"]
layout_mode = 2
text = "Main Menu"
script = ExtResource("1_y4pxu")
